# well

./: Cargo.toml  README.md  rustfmt.toml
examples/: config.lua
src/: backend.rs  config.rs  handlers.rs  input.rs  logger.rs  main.rs  render.rs  shader.frag  shell.rs  state.rs
src/backend/: mod.rs  winit.rs
src/config/: mod.rs  watcher.rs
src/render/: element.rs  mod.rs  shader.frag  shader.rs
src/shell/: focus.rs  fullscreen.rs  mod.rs
src/shell/workspaces/: mod.rs  workspace.rs
